# customer-support-pydantic-webapp

./: .cursorrules  .env.example  .gitignore  README.md  customer_name.csv  old_main.py  pyproject.toml
app/: main.py
app/agents/: loan.py  marketing.py  support.py  triage.py
app/agents/twitter/: critics.py  finalize.py  generate.py
app/api/: main.py
app/api/routes/: post.py  triage.py
app/core/: config.py
app/core/database/: db.py  transaction.py
app/dependencies/: dependencies.py
app/models/: schemas.py  tables.py  twitter.py
app/repositories/: customer.py  loan.py
app/services/: tavily_service.py  typefully_service.py
util/: dml.sql  tables.sql
